--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mohamed mazika</title>
     <!-- fille normalize css -->
-    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <!-- font awscom -->
-    <link rel="stylesheet" href="/css/all.min.css">
+    <link rel="stylesheet" href="css/all.min.css">
     <!-- google font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,9 +17,9 @@
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,400;1,600;1,700;1,800&display=swap"
         rel="stylesheet">
     <!-- fille css  -->
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="css/index.css">
     <!-- media qyury  -->
-    <link rel="stylesheet" href="/css/media-qury.css">
+    <link rel="stylesheet" href="css/media-qury.css">
     <link rel="shortcut icon" href="imges/1.png" type="image/x-icon">
 </head>
 
@@ -68,7 +68,7 @@
                             class="fa-brands fa-google fa-3x"></i></a>
                 </div>
 
-                <div class="image"><img src="/imges/youssef_ahmed.png" alt=""></div>
+                <div class="image"><img src="imges/youssef_ahmed.png" alt=""></div>
             </div>
         </div>
     </div>
@@ -133,56 +133,56 @@
         </h2>
         <div class="container">
             <div class="box">
-                <img src="/imges/PROJECTS 8.jpg" alt="">
+                <img src="imges/PROJECTS 8.jpg" alt="">
                 <div class="text">
                     <a target="blank" href="https://youtube-new-version.netlify.app/">details</a>
                     <h3>YOUTUBE NEW VERSION CLONE</h3>
                 </div>
             </div>
             <div class="box">
-                <img src="/imges/PROJECTS 4.jpg" alt="">
+                <img src="imges/PROJECTS 4.jpg" alt="">
                 <div class="text">
                     <a target="blank" href="https://book-store-react-app.netlify.app/">details</a>
                     <h3>BOOK STORE REACT APP</h3>
                 </div>
             </div>
             <div class="box">
-                <img src="/imges/PROJECTS 1.jpg" alt="">
+                <img src="imges/PROJECTS 1.jpg" alt="">
                 <div class="text">
                     <a target="blank" href="https://book-store-react-app.netlify.app/">details</a>
                     <h3>BOOK STORE REACT APP</h3>
                 </div>
             </div>
             <div class="box">
-                <img src="/imges/PROJECTS 2.jpg" alt="">
+                <img src="imges/PROJECTS 2.jpg" alt="">
                 <div class="text">
                     <a target="blank" href="https://book-store-react-app.netlify.app/">details</a>
                     <h3>BOOK STORE REACT APP</h3>
                 </div>
             </div>
             <div class="box">
-                <img src="/imges/PROJECTS 3.jpg" alt="">
+                <img src="imges/PROJECTS 3.jpg" alt="">
                 <div class="text">
                     <a target="blank" href="https://book-store-react-app.netlify.app/">details</a>
                     <h3>BOOK STORE REACT APP</h3>
                 </div>
             </div>
             <div class="box">
-                <img src="/imges/PROJECTS 6.jpg" alt="">
+                <img src="imges/PROJECTS 6.jpg" alt="">
                 <div class="text">
                     <a target="blank" href="https://book-store-react-app.netlify.app/">details</a>
                     <h3>BOOK STORE REACT APP</h3>
                 </div>
             </div>
             <div class="box">
-                <img src="/imges/PROJECTS 7.jpg" alt="">
+                <img src="imges/PROJECTS 7.jpg" alt="">
                 <div class="text">
                     <a target="blank" href="https://book-store-react-app.netlify.app/">details</a>
                     <h3>BOOK STORE REACT APP</h3>
                 </div>
             </div>
             <div class="box">
-                <img src="/imges/PROJECTS 5.jpg" alt="">
+                <img src="imges/PROJECTS 5.jpg" alt="">
                 <div class="text">
                     <a target="blank" href="https://book-store-react-app.netlify.app/">details</a>
                     <h3>BOOK STORE REACT APP</h3>
